# mantle-engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
game/: CMakeLists.txt  actions.h  assets.gen.h  camera_system.h  components.h  main.cpp
game/scripts/: camera.cpp  camera.h  player.cpp  player.h
mantle/src/: CMakeLists.txt  main.cpp
mantle/src/assets/: CMakeLists.txt
mantle/src/assets/private/: asset_manager.cpp  impl.h
mantle/src/assets/public/mantle/assets/: asset_manager.h  types.h
mantle/src/build_info/: CMakeLists.txt
mantle/src/build_info/private/: build_info.cpp
mantle/src/build_info/public/build_info/: build_info.h
mantle/src/build_info/public/mantle/build_info/: build_info.h
mantle/src/camera/: CMakeLists.txt
mantle/src/camera/private/: camera.cpp
mantle/src/camera/public/camera/: camera.h
mantle/src/camera/public/mantle/camera/: math.h
mantle/src/core/: CMakeLists.txt
mantle/src/core/private/: logger.cpp
mantle/src/core/private/concurrency/: worker_pool.cpp
mantle/src/core/private/memory/: arena_allocator.cpp  os_memory.cpp  persistent_allocator.cpp  tlsf_allocator.cpp  virtual_heap.cpp
mantle/src/core/public/core/: assert.h  enum_flags.h  logger.h  macros.h  types.h
mantle/src/core/public/core/memory/: allocator.h  arena_allocator.h  memory_block.h  os_memory.h  persistent_allocator.h  scope_arena.h  thread_safe_allocator.h  tlsf_allocator.h  virtual_heap.h
mantle/src/core/public/mantle/core/: assert.h  enum_flags.h  helpers.h  logger.h  macros.h  types.h
mantle/src/ecs/: CMakeLists.txt
mantle/src/ecs/private/: ecs.cpp
mantle/src/ecs/private/camera/: camera.cpp
mantle/src/ecs/private/input/: components.h  input.cpp
mantle/src/ecs/private/player/: player.cpp  player.h
mantle/src/ecs/public/ecs/: ecs.h
mantle/src/ecs/public/mantle/ecs/: components.h  ecs.h  entity.h
mantle/src/engine/: CMakeLists.txt
mantle/src/engine/private/: default_render_pipeline.cpp  default_render_pipeline.h  engine.cpp  simple_renderer.cpp  simple_renderer.h
mantle/src/engine/public/engine/: engine.h
mantle/src/engine/public/mantle/engine/: engine.h  script.h
mantle/src/input/: CMakeLists.txt
mantle/src/input/private/: input.cpp  input_system.cpp
mantle/src/input/public/mantle/input/: input.h  input_system.h
mantle/src/keybinds/public/mantle/keybinds/: keybinds.h
mantle/src/lua/: CMakeLists.txt
mantle/src/math/: CMakeLists.txt
mantle/src/math/private/: aabb.cpp  frustum.cpp  plane.cpp
mantle/src/math/public/mantle/math/: aabb.h  frustum.h  plane.h
mantle/src/math/public/math/: aabb.h  frustum.h  plane.h
mantle/src/mesh/: CMakeLists.txt
mantle/src/mesh/public/mesh/: mesh.h  mesh_handle.h  vertex.h
mantle/src/noise/: CMakeLists.txt
mantle/src/noise/private/: sampler.cpp
mantle/src/noise/public/mantle/noise/: noise.h  sampler.h
mantle/src/noise/public/noise/: noise.h  sampler.h
mantle/src/physics/private/: arena_temp_allocator.cpp  arena_temp_allocator.h  broad_phase_layers.cpp  broad_phase_layers.h  character_controller_impl.cpp  character_controller_impl.h  layers.cpp  layers.h  physics_system.cpp  physics_system_impl.cpp  physics_system_impl.h
mantle/src/physics/public/: arena_temp_allocator.h
mantle/src/physics/public/mantle/physics/: character_controller.h  physics_system.h
mantle/src/physics/public/physics/: character_controller.h  physics_system.h
mantle/src/renderer/: CMakeLists.txt
mantle/src/renderer/private/: renderer.cpp  renderer_impl.cpp  renderer_impl.h  types.h  utils.cpp  vkassert.h  vulkan_allocator.h  vulkan_device.cpp  vulkan_device.h  vulkan_graphics_context.cpp  vulkan_graphics_context.h  vulkan_graphics_pipeline.cpp  vulkan_graphics_pipeline.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_types.h  vulkan_utils.cpp
mantle/src/renderer/private/core/: renderer.cpp  renderer_impl.cpp  renderer_impl.h
mantle/src/renderer/private/frame_graph/: frame_graph.cpp  frame_graph_builder.cpp  frame_graph_pass_context.cpp  frame_graph_pass_context_internal.h  render_graph_internal.h
mantle/src/renderer/private/render_graph/: render_graph.cpp  render_graph_builder.cpp  render_graph_internal.h  render_pass_context.cpp  render_pass_context_internal.h
mantle/src/renderer/private/resources/: deletion_queue.h  gpu_resource_manager.cpp  gpu_resource_manager_impl.h  gpu_resource_manager_internal.h  resources.h  transient_resources.cpp  transient_resources.h  vulkan_allocator.cpp  vulkan_gpu_allocator.cpp  vulkan_gpu_allocator.h  vulkan_resouce_manager.cpp  vulkan_resource_manager.h
mantle/src/renderer/private/vulkan/: command_recorder.cpp  command_recorder.h  frame_scheduler.cpp  frame_scheduler.h  vkassert.h  vulkan_backend.cpp  vulkan_backend.h  vulkan_context.cpp  vulkan_context.h  vulkan_cpu_allocator.cpp  vulkan_cpu_allocator.h  vulkan_device.cpp  vulkan_device.h  vulkan_graphics_pipeline.cpp  vulkan_graphics_pipeline.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_types.h  vulkan_utils.cpp  vulkan_utils.h
mantle/src/renderer/public/mantle/renderer/: blackboard.h  blackboard_types.h  frame_graph.h  renderer.h  (+3 more)
mantle/src/renderer/public/renderer/: blackboard.h  frame_graph.h  gpu_resource_manager.h  handles.h  render_graph.h  renderer.h  types.h  utils.h  vertex.h
mantle/src/system_info/: CMakeLists.txt
mantle/src/system_info/private/: system_info.cpp
mantle/src/system_info/public/system_info/: system_info.h
mantle/src/window/: CMakeLists.txt
mantle/src/window/private/: sdl_allocator.cpp  sdl_allocator.h  window.cpp
mantle/src/window/public/window/: window.h
mantle/src/world/: CMakeLists.txt
mantle/src/world/private/: bgm.cpp  chunk.cpp  chunk_generation_system.cpp  chunk_mesher.cpp  chunk_meshing_system.cpp  chunk_rendering_system.cpp  chunk_storage_system.cpp  world.cpp
mantle/src/world/public/world/: chunk.h  chunk_generation_system.h  chunk_mesher.h  chunk_meshing_system.h  chunk_storage.h  chunk_storage_system.h  voxel.h  world.h
mantle/tests/: CMakeLists.txt  aabb.cpp  arena.cpp  bgm.cpp  camera_test.cpp  frustum.cpp  virtual_heap.cpp
(+52 files in other folders)
